syntax = "proto3";

package bsync;
option go_package = "./;bsync";

import "google/protobuf/timestamp.proto";

//
// Sync
//


message MuteOperation {
  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_ADD = 1;
    TYPE_REMOVE = 2;
    TYPE_CLEAR = 3;
  }
  string id = 1;
  Type type = 2;
  string actor_did = 3;
  string subject = 4;
}

message AddMuteOperationRequest {
  MuteOperation.Type type = 1;
  string actor_did = 2;
  string subject = 3;
}

message AddMuteOperationResponse {
  MuteOperation operation = 1;
}

message ScanMuteOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanMuteOperationsResponse {
  repeated MuteOperation operations = 1;
  string cursor = 2;
}

message NotifOperation {
  string id = 1;
  string actor_did = 2;
  optional bool priority = 3;
}

message AddNotifOperationRequest {
  string actor_did = 1;
  optional bool priority = 2;
}

message AddNotifOperationResponse {
  NotifOperation operation = 1;
}

message ScanNotifOperationsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ScanNotifOperationsResponse {
  repeated NotifOperation operations = 1;
  string cursor = 2;
}

message AddPurchaseOperationRequest {
  string actor_did = 1;
}

message AddPurchaseOperationResponse {}

message Subscription {
  string status = 1;
  string renewalStatus = 2;
  string group = 3;
  string platform = 4;
  string offering = 5;
  google.protobuf.Timestamp periodEndsAt = 6;
  google.protobuf.Timestamp periodStartsAt = 7;
  google.protobuf.Timestamp purchasedAt = 8;
}

message GetActiveSubscriptionsRequest {
  string actor_did = 1;
}

message GetActiveSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
}

message SubscriptionOffering {
  string id = 1;
  string product = 2;
}

message GetSubscriptionGroupRequest {
  string group = 1;
  string platform = 2;
}

message GetSubscriptionGroupResponse {
  repeated SubscriptionOffering offerings = 1;
}

// Ping
message PingRequest {}
message PingResponse {}


service Service {
  // Sync
  rpc AddMuteOperation(AddMuteOperationRequest) returns (AddMuteOperationResponse);
  rpc ScanMuteOperations(ScanMuteOperationsRequest) returns (ScanMuteOperationsResponse);
  rpc AddNotifOperation(AddNotifOperationRequest) returns (AddNotifOperationResponse);
  rpc ScanNotifOperations(ScanNotifOperationsRequest) returns (ScanNotifOperationsResponse);
  // Purchase
  rpc AddPurchaseOperation(AddPurchaseOperationRequest) returns (AddPurchaseOperationResponse);
  rpc GetActiveSubscriptions(GetActiveSubscriptionsRequest) returns (GetActiveSubscriptionsResponse);
  rpc GetSubscriptionGroup(GetSubscriptionGroupRequest) returns (GetSubscriptionGroupResponse);
  // Ping
  rpc Ping(PingRequest) returns (PingResponse);
}
